--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
 body{
-    background: linear-gradient(to bottom, #66ffff 0%, #ff6699 100%);
+    background: linear-gradient(to bottom top, #66ffff 0%, #ff6699 100%);
+    background-size: cover;
+    height: 100vh;
+    width: 100%;
 }
